Tweaked font size to prevent overflow on smaller screens

--- a/style.css
+++ b/style.css
@@ -2,10 +2,11 @@
 @import url(https://fonts.googleapis.com/css?family=Roboto:300);
 
 .answer{
-  font-size: 5em;
+  font-size: 4.75em;
 	font-family: 'Dancing Script', cursive;
   color: #fff;
   width:auto;
+  height: auto;
   position: absolute;
   top: 50%;
   left: 50%;
